--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The world famous newspaper that covers all english speaking people">
-    <title>Document</title>
+    <title>How News</title>
 
     <link rel="stylesheet" href="styles.css">
 
